; ModuleID = '/home/carl/AnghaBench/linux/net/ipv4/extr_nexthop.c_remove_nexthop.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv4/extr_nexthop.c_remove_nexthop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.nexthop = type { i32 }
%struct.nl_info = type { i32 }

@RTM_DELNEXTHOP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.net*, %struct.nexthop*, %struct.nl_info*)* @remove_nexthop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_nexthop(%struct.net* %0, %struct.nexthop* %1, %struct.nl_info* %2) #0 {
  %4 = alloca %struct.net*, align 8
  %5 = alloca %struct.nexthop*, align 8
  %6 = alloca %struct.nl_info*, align 8
  store %struct.net* %0, %struct.net** %4, align 8
  store %struct.nexthop* %1, %struct.nexthop** %5, align 8
  store %struct.nl_info* %2, %struct.nl_info** %6, align 8
  %7 = load %struct.nexthop*, %struct.nexthop** %5, align 8
  %8 = getelementptr inbounds %struct.nexthop, %struct.nexthop* %7, i32 0, i32 0
  %9 = load %struct.net*, %struct.net** %4, align 8
  %10 = getelementptr inbounds %struct.net, %struct.net* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call i32 @rb_erase(i32* %8, i32* %11)
  %13 = load %struct.nl_info*, %struct.nl_info** %6, align 8
  %14 = icmp ne %struct.nl_info* %13, null
  br i1 %14, label %15, label %20

15:                                               ; preds = %3
  %16 = load i32, i32* @RTM_DELNEXTHOP, align 4
  %17 = load %struct.nexthop*, %struct.nexthop** %5, align 8
  %18 = load %struct.nl_info*, %struct.nl_info** %6, align 8
  %19 = call i32 @nexthop_notify(i32 %16, %struct.nexthop* %17, %struct.nl_info* %18)
  br label %20

20:                                               ; preds = %15, %3
  %21 = load %struct.net*, %struct.net** %4, align 8
  %22 = load %struct.nexthop*, %struct.nexthop** %5, align 8
  %23 = load %struct.nl_info*, %struct.nl_info** %6, align 8
  %24 = call i32 @__remove_nexthop(%struct.net* %21, %struct.nexthop* %22, %struct.nl_info* %23)
  %25 = load %struct.net*, %struct.net** %4, align 8
  %26 = call i32 @nh_base_seq_inc(%struct.net* %25)
  %27 = load %struct.nexthop*, %struct.nexthop** %5, align 8
  %28 = call i32 @nexthop_put(%struct.nexthop* %27)
  ret void
}

declare dso_local i32 @rb_erase(i32*, i32*) #1

declare dso_local i32 @nexthop_notify(i32, %struct.nexthop*, %struct.nl_info*) #1

declare dso_local i32 @__remove_nexthop(%struct.net*, %struct.nexthop*, %struct.nl_info*) #1

declare dso_local i32 @nh_base_seq_inc(%struct.net*) #1

declare dso_local i32 @nexthop_put(%struct.nexthop*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
